[package]
name = "re0-parser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
url = "2.4.1"
yggdrasil-rt = "0.0.13"

[dev-dependencies]
globwalk = "0.8.1"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
